main.tf
# Declare a variável para a senha do admin
variable "admin_password" {
  description = "Password for the admin user on the virtual machine"
  default     = "${{ secrets.VM_ADMIN_PASSWORD }}"  # Acesso à variável secreta do GitHub
}

# Resource Group
resource "azurerm_resource_group" "rg" {
  name     = "student-rg"
  location = "eastus"
}

# Virtual Network
resource "azurerm_virtual_network" "vnet" {
  name                = "student-vnet"
  address_space       = ["10.0.0.0/16"]
  location            = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name
}

# Subnet
resource "azurerm_subnet" "subnet" {
  name                 = "student-subnet"
  resource_group_name  = azurerm_resource_group.rg.name
  virtual_network_name = azurerm_virtual_network.vnet.name
  address_prefixes     = ["10.0.1.0/24"]
}

# Public IP
resource "azurerm_public_ip" "myPubIP" {
  count               = var.number_resources
  name                = "student-pip-${count.index + 1}"
  location            = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name
  allocation_method   = "Dynamic"
}

# Network Security Group (NSG)
resource "azurerm_network_security_group" "nsg" {
  name                = "student-nsg"
  location            = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name

  security_rule {
    name                       = "SSH"
    priority                   = 1001
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "22"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "HTTP"
    priority                   = 200
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "*"
    source_port_range          = "*"
    destination_port_range     = "80"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }
}

# Network Interface (NIC)
resource "azurerm_network_interface" "nic" {
  count               = var.number_resources
  name                = "student-nic-${count.index + 1}"
  location            = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name

  ip_configuration {
    name                          = "nic-${count.index + 1}-config"
    subnet_id                     = azurerm_subnet.subnet.id
    private_ip_address_allocation = "Dynamic"
    public_ip_address_id          = azurerm_public_ip.myPubIP[count.index].id
  }
}

# Associate NSG with NIC
resource "azurerm_network_interface_security_group_association" "nicNSG" {
  count                     = var.number_resources
  network_interface_id      = azurerm_network_interface.nic[count.index].id
  network_security_group_id = azurerm_network_security_group.nsg.id
}

# SSH Key Generation
resource "random_password" "vm_admin_password" {
  length           = 16
  special          = true
  override_special = "_%@"
}

# Virtual Machine (VM)
resource "azurerm_linux_virtual_machine" "myVM" {
  count                 = var.number_resources
  name                  = "student-vm-${count.index + 1}"
  location              = azurerm_resource_group.rg.location
  resource_group_name   = azurerm_resource_group.rg.name
  network_interface_ids = [azurerm_network_interface.nic[count.index].id]
  size                  = "Standard_B1s"

  os_disk {
    name                 = "student-osdisk-${count.index + 1}"
    caching              = "ReadWrite"
    storage_account_type = "Standard_LRS"
  }

  source_image_reference {
    publisher = "Canonical"
    offer     = "0001-com-ubuntu-server-jammy"
    sku       = "22_04-lts-gen2"
    version   = "latest"
  }

  computer_name  = "student-vm-${count.index + 1}"
  admin_username = var.username
  admin_password = var.admin_password  # Usar variável para a senha do admin

  admin_ssh_key {
    username   = var.username
    public_key = azapi_resource_action.ssh_public_key_gen.output.publicKey
  }

  depends_on = [azurerm_network_interface_security_group_association.nicNSG]
}

# Generate Ansible Inventory
resource "local_file" "hosts_cfg" {
  content  = templatefile("inventory.tpl", {
    vms      = azurerm_linux_virtual_machine.myVM
    username = var.username
  })
  filename = "./ansible/inventory.yml"
}
